2010-06-14  Corinna Vinschen  <corinna@vinschen.de>

	* dlfcn.cc (get_full_path_of_dll): Revert patch from 2010-04-29.

2010-06-12  Christopher Faylor  <me+cygwin@cgf.cx>

	* times.cc (gtod): Move to sharable region.

2010-06-09  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check_shortcut): Use ro_u_empty rather than
	local UNICODE_STRING object.
	(symlink_info::check_sysfile): Ditto.  Return immediately if NtOpenFile
	failed to avoid closing random handle.  Improve debug output in case
	NtReadFile failed.

2010-06-08  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Set h to NULL after closing handle
	in udf check.  Remove overagressive bracketing.  Don't set h to NULL
	without closing the handle.  Fix using wrong handle in checking
	file system when using parent directory handle.

2010-06-07  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/stdio.h: Remove _GNU_SOURCE guard around getline
	and getdelim prototypes since they are SUSv4 now.

2010-06-02  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (STATUS_BAD_NETWORK_PATH): Define.
	(STATUS_BAD_NETWORK_NAME): Define.
	* path.cc (symlink_info::check): Convert STATUS_BAD_NETWORK_PATH and
	STATUS_BAD_NETWORK_NAME into an immediate ENOENT.

2010-06-01  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (open_stackdumpfile): Correctly append .stackdump
	suffix.

	* nlsfuncs.cc (rebase_locale_buf): Reorder arguments.  Accommodate
	throughout.  Add pointer to end of buffer and avoid changing pointers
	not pointing into the buffer.

2010-06-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_netdrive.cc (fhandler_netdrive::exists): Always free WNet
	resource if created.

2010-05-31  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.cc (cygheap_user::set_name): Allow to change the user name
	if it only differs by case.

2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_registry.cc (multi_wcstombs): New function.